--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+.bkg {
+  /*background: url("https://wallpaperaccess.com/full/164553.png");
+  background-size: cover;*/
+  margin-top: 25rem;
+  margin-right: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  height: 100%;
+  width: 10rem;
+}
