--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,35 @@
 .Fearling {
     width: 20rem;
-
+    margin: auto;
+    display: block;
+    margin-top: 20rem;
 }
+    
+.table {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    vertical-align: bottom;
+}
+
+.table p{
+    background-color: white;
+    height: 3rem;
+    text-align: center;
+    padding-top: 1.6rem;
+    outline: black;
+    outline-style: solid;
+}
+
+.topItem {
+    margin-bottom: -.9rem;
+    width: 24rem;
+}
+
+.bottomItem {
+    width: 16rem;
+}
+
+
+
